Bug 601262 - A string literal containing an octal escape before a strict mode directive should be a syntax error.  (Yes, this requirement is ugly, but it's what ES5 says.)  r=brendan